# durak

./: .gitignore  CMakeLists.txt  build.sh
libcards/: CMakeLists.txt  card.cpp  card.hpp  deck.cpp  deck.hpp
libcards/include/cards/: card.hpp  deck.hpp
libcards/src/: CMakeLists.txt  card.cpp  deck.cpp
libutils/: CMakeLists.txt  iterable_enums.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_card.cpp  test_deck.cpp  test_iterable_enums.cpp
